--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,9 @@ buildscript {
     repositories {
         google()
         jcenter()
+	maven {
+             url 'https://plugins.gradle.org/m2/'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.1'
@@ -12,6 +15,7 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+	classpath 'net.researchgate:gradle-release:2.6.0'
     }
 }
 
